[pom] Add lombok snippet for versions prior to 1.18.20